# Vvoice

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: .env  Cargo.toml  be_err.txt  be_err_new.txt  build.rs  build_error_2.txt  build_error_backend.txt
backend/.cargo/: config.toml
backend/migrations/: 001_initial_setup.sql  002_create_channels.sql  003_create_messages.sql  004_add_user_profile.sql
backend/proto/: Mumble.proto
backend/src/: auth_service.rs  bootstrap.rs  cert.rs  chat_service.rs  codec.rs  connection.rs  db.rs  handler.rs  main.rs  packet_dispatch.rs  session_service.rs  state.rs  voice_router.rs  voice_service.rs
client/: package-lock.json  package.json  vitest.config.ts
client/src/: App.css  App.tsx  index.css
client/src-tauri/: Cargo.toml  build.rs  build_err.txt  build_err_2.txt  build_error.txt  build_error_client.txt  build_error_client_2.txt  build_log.txt  ce_err_new.txt  tauri.conf.json
client/src-tauri/.cargo/: config.toml
client/src-tauri/icons/: icon.icns
client/src-tauri/proto/: Mumble.proto
client/src-tauri/src/: audio.rs  lib.rs  mumble.rs
docs/: CHANGELOG.md  WebRTC_development  code_improvement_report.md  codebase-analysis.md  deep-research-report.md  deep_codebase_audit.md  design_document.md  grand_plan.md  implementation-phases.md  remote-connectivity-checklist.md
docs/webrtc/: replacement-plan.md  signaling-protocol.md
examples/web-client-demo/: index.html
murmur/: docker-compose.yml
proto/: Mumble.proto  mumble_codec_shared.rs
server/: .env.example  Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
server/scripts/: remote-readiness-check.mjs
server/src/: config.ts  index.ts
server/tests/: fixtures.ts  integration-setup.ts  protocol.test.js  room-manager.test.js  room-manager.test.ts
webrtc/: README.md
webrtc/client-web-demo/: README.md  index.html  package-lock.json  package.json
webrtc/docs/: architecture.md  test-plan.md  threat-model.md
webrtc/signaling-server/: README.md  package-lock.json  package.json  tsconfig.json
(+86 files in other folders)
