[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-native-certs = "0.7"
bytes = "1.5"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
prost = "0.12"
prost-types = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15"
argon2 = "0.5" # Password hashing
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
rcgen = "0.11"

axum = "0.7"

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"
